Src/Newt/v2/NewtonDynamics/Import/testimport.cs

//                [DllImport("Newton.dll", EntryPoint = "NewtonHingeGetJointForce")]
//                static public extern void GetForce(int jointPtr, ref Vector3 force);
//                [DllImport("Newton.dll", EntryPoint = "NewtonHingeCalculateStopAlpha")]
//                static public extern float CalculateStopAlpha(int jointPtr, ref NewtonHingeSliderUpdateDesc desc, float angleLimit);
//                [DllImport("Newton.dll", EntryPoint = "NewtonHingeSetUserCallback")]
//                static public extern void SetUserCallback(int jointPtr, HingeJointCB callback);
//            }
//            static public class Slider
//            {
//                [DllImport("Newton.dll", EntryPoint = "NewtonConstraintCreateSlider")]
//                static public extern int Create(int bodyPtr, ref Vector3 pivotPoint, ref Vector3 pinDir, int childBody, int parentBody);
//                [DllImport("Newton.dll", EntryPoint = "NewtonSliderGetJointPosit")]
//                static public extern float GetPosit(int jointPtr);
//                [DllImport("Newton.dll", EntryPoint = "NewtonSliderGetJointVeloc")]
//                static public extern float GetVeloc(int jointPtr);
//                [DllImport("Newton.dll", EntryPoint = "NewtonSliderGetJointForce")]
//                static public extern void GetForce(int jointPtr, ref Vector3 force);
//                [DllImport("Newton.dll", EntryPoint = "NewtonSliderSetUserCallback")]
//                static public extern void SetUserCallback(int jointPtr, SliderJointCB callback);
//                [DllImport("Newton.dll", EntryPoint = "NewtonSliderCalculateStopAccel")]
//                static public extern float CalculateStopAccel(int jointPtr, ref NewtonHingeSliderUpdateDesc desc, float angleLimit);
//            }
//            static public class Corkscrew
//            {
//                [DllImport("Newton.dll", EntryPoint = "NewtonConstraintCreateCorkscrew")]
//                static public extern void Create(int bodyPtr, float[] pivotPoint, float[] pinDir, int childBody, int parentBody);
//                [DllImport("Newton.dll", EntryPoint = "NewtonCorkscrewGetJointPosit ")]
//                static public extern float GetPosit(int jointPtr);
//                [DllImport("Newton.dll", EntryPoint = "NewtonCorkscrewGetJointVeloc")]
//                static public extern float GetVeloc(int jointPtr);
//                [DllImport("Newton.dll", EntryPoint = "NewtonCorkscrewGetJointAngle ")]
//                static public extern float GetAngle(int jointPtr);
//                [DllImport("Newton.dll", EntryPoint = "NewtonCorkscrewGetJointOmega")]
//                static public extern float GetOmega(int jointPtr);
//                [DllImport("Newton.dll", EntryPoint = "NewtonCorkscrewGetJointForce")]
//                static public extern void GetForce(int jointPtr, ref Vector3 force);
//            }
//            static public class Universal
//            {
//                [DllImport("Newton.dll", EntryPoint = "NewtonConstraintCreateUniversal")]
//                static public extern int Create(int nWorld, ref Vector3 pivotPoint, ref Vector3 pinDir0, ref Vector3 pinDir1, int childBody, int parentBody);
//                [DllImport("Newton.dll", EntryPoint = "NewtonUniversalGetJointAngle0")]
//                static public extern float GetAngle0(int jointPtr);
//                [DllImport("Newton.dll", EntryPoint = "NewtonUniversalGetJointAngle1")]
//                static public extern float GetAngle1(int jointPtr);
//                [DllImport("Newton.dll", EntryPoint = "NewtonUniversalGetJointOmega0")]
//                static public extern float GetOmega0(int jointPtr);
//                [DllImport("Newton.dll", EntryPoint = "NewtonUniversalGetJointOmega1")]
//                static public extern float GetOmega1(int jointPtr);
//                [DllImport("Newton.dll", EntryPoint = "NewtonUniversalGetJointForce")]
//                static public extern void GetForce(int jointPtr, ref Vector3 force);
//                [DllImport("Newton.dll", EntryPoint = "NewtonUniversalSetUserCallback")]
//                static public extern void SetUserCallback(int jointPtr, UniversalJointCB callback);
//                [DllImport("Newton.dll", EntryPoint = "NewtonUniversalCalculateStopAlpha0")]
//                static public extern float CalculateStopAlpha0(int jointPtr, IntPtr desc, float angleLimit);
//                [DllImport("Newton.dll", EntryPoint = "NewtonUniversalCalculateStopAlpha1")]
//                static public extern float CalculateStopAlpha1(int jointPtr, IntPtr desc, float angleLimit);
//            }
//            static public class UpVector
//            {
//                [DllImport("Newton.dll", EntryPoint = "NewtonConstraintCreateUpVector")]
//                static public extern int Create(int nWorld, ref Vector3 pinDir, int body);
//                [DllImport("Newton.dll", EntryPoint = "NewtonUpVectorGetPin")]
//                static public extern void GetPin(int jointPtr, ref Vector3 pin);
//                [DllImport("Newton.dll", EntryPoint = "NewtonUpVectorSetPin")]
//                static public extern void SetPin(int jointPtr, ref Vector3 pin);
//            }

//            [DllImport("Newton.dll", EntryPoint = "NewtonJointSetUserData")]
//            static public extern void SetUserData(int jointPtr, [MarshalAs(UnmanagedType.IUnknown)] object o);
//            [DllImport("Newton.dll", EntryPoint = "NewtonJointGetUserData")]
//            [return: MarshalAs(UnmanagedType.IUnknown)]
//            static public extern object GetUserData(int jointPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonJointSetCollisionState")]
//            static public extern void SetCollisionState(int jointPtr, int state);
//            [DllImport("Newton.dll", EntryPoint = "NewtonJointGetCollisionState")]
//            static public extern int GetCollisionState(int jointPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonJointSetStiffness")]
//            static public extern void SetStiffness(int jointPtr, float stifness);
//            [DllImport("Newton.dll", EntryPoint = "NewtonJointGetStiffness")]
//            static public extern float GetStiffness(int jointPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonDestroyJoint")]
//            static public extern void Destroy(int nWorld, int jointPtr);
//        }
//        static public class Ragdoll
//        {
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateRagDoll")]
//            static public extern int Create(int nWorld);
//            [DllImport("Newton.dll", EntryPoint = "NewtonDestroyRagDoll")]
//            static public extern void Destroy(int nWorld, int ragDoll);
//            [DllImport("Newton.dll", EntryPoint = "NewtonRagDollBegin")]
//            static public extern void Begin(int ragDoll);
//            [DllImport("Newton.dll", EntryPoint = "NewtonRagDollEnd")]
//            static public extern void End(int ragDoll);
//            [DllImport("Newton.dll", EntryPoint = "NewtonRagDollAddBone")]
//            static public extern void AddBone(int ragDoll, int parentBone, [MarshalAs(UnmanagedType.IUnknown)] object o, float mass, ref Matrix matrix, int boneCollision, ref Vector3 size);
//            [DllImport("Newton.dll", EntryPoint = "NewtonRagDollBoneGetUserData")]
//            [return: MarshalAs(UnmanagedType.IUnknown)]
//            static public extern object BoneGetUserData(int ragdollBonePtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonRagDollBoneSetID")]
//            static public extern void BoneSetID(int ragdollBonePtr, int id);
//            [DllImport("Newton.dll", EntryPoint = "NewtonRagDollFindBone")]
//            static public extern int FindBone(int ragdollBonePtr, int id);
//            [DllImport("Newton.dll", EntryPoint = "NewtonRagDollBoneGetBody")]
//            static public extern int BoneGetBody(int ragdollBonePtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonRagDollBoneSetLimits")]
//            static public extern void BoneSetLimits(int ragdollBonePtr, ref Vector3 coneDir, float minConeAngle, float maxConeAngle, float maxTwistAngle, float[] lateralConeDir, float negativeBilateralConeAngle, float positiveBilateralConeAngle);
//            [DllImport("Newton.dll", EntryPoint = "NewtonRagDollBoneGetLocalMatrix")]
//            static public extern void BoneGetLocalMatrix(int ragdollBonePtr, ref Matrix matrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonRagDollBoneGetGlobalMatrix")]
//            static public extern void BoneGetGlobalMatrix(int ragdollBonePtr, ref Matrix matrix);
//        }
//    }
//}